# gnunet

./: README.md
gnunet/: .editorconfig  .gitignore  .gitmodules  .mailmap  Makefile.in  README.meson.md  configure  flake.nix  meson-dist-script  meson.build  meson.build.arm  meson.build.arm_monolith  meson.build.arm_util_only  meson.options  x86_64-aarch64-linux-android.txt
gnunet-ext/src/ext/: .gitignore  Makefile.am  ext.conf.in  ext.h  ext_api.c  gnunet-ext.c  gnunet-service-ext.c  test_ext_api.c
gnunet-fuse/: .gitignore  .mailmap  AUTHORS  ChangeLog  Makefile.am  README  bootstrap  configure.ac
gnunet-fuse/doc/: Makefile.am  gnunet-fuse.1
gnunet-fuse/m4/: .gitignore
gnunet-fuse/po/: .gitignore  ChangeLog  POTFILES.in  gnunet-ext.pot
gnunet-fuse/src/: Makefile.am
gnunet-fuse/src/fuse/: .gitignore  Makefile.am  ext_api.c  getattr.c  gettext.h  gfs_download.c  gfs_download.h  gnunet-fuse.c  gnunet-fuse.h  mkdir.c  mknod.c  mutex.c  mutex.h  open.c  read.c  readdir.c  release.c  rename.c  rmdir.c  truncate.c  unlink.c  utimens.c  write.c
gnunet/contrib/: .gitignore  gnunet.m4  meson.build
gnunet/contrib/ci/: ci.sh  debian-package-job.sh  riscv64.Containerfile  version.sh
gnunet/contrib/conf/: meson.build  shell.nix
gnunet/contrib/docker/: README.md  docker-entrypoint.sh
gnunet/contrib/scripts/: generate-release-triplet.sh  meson.build  news_delta.sh  update_news.sh
gnunet/contrib/xdg-scheme-handler/: README.md
gnunet/data/: meson.build
gnunet/data/gns/: def.tex  gns-bcd-forbidden.html  gns-bcd-internal-error.html  gns-bcd-invalid-key.html  gns-bcd-not-found.html  gns-bcd-png.tex  gns-bcd-simple.html  gns-bcd-simple.tex  gns-bcd.html  gns-bcd.tex
gnunet/data/hellos/: meson.build
gnunet/debian/: gnunet.install  gnunet.postinst  gnunet.postrm  libgnunet.install
gnunet/debian/etc/: gnunet.conf
gnunet/doc/: meson.build
gnunet/doc/doxygen/: gnunet.doxy
gnunet/doc/man/: .gitignore  gnunet-config.1  gnunet-core.1  gnunet-dht-get.1  gnunet-dht-hello.1  gnunet-dht-monitor.1  gnunet-dht-put.1  gnunet-did.1  gnunet-dns2gns.1  gnunet-hello.1  gnunet-identity.1  gnunet-messenger.1  gnunet-namestore-dbtool.1  gnunet-namestore-zonefile.1  gnunet-namestore.1  gnunet-nse.1  gnunet-pils.1  gnunet-qr.1  gnunet-reclaim.1  gnunet-search.1  meson.build  (+1 more)
gnunet/pkgconfig/: gnunetgns.pc.in  gnunetgnsrecord.pc.in  gnunetjson.pc.in  gnunetmessenger.pc.in  gnunetmhd.pc.in  gnunetreclaim.pc.in
gnunet/po/: POTFILES.in  de.po  es.po  fr.po  it.po  sr.po  sv.po  vi.po  zh_CN.po
gnunet/scripts/: doxygen.meson.sh  gana_update.sh  get_version.sh  meson.build  pogen.sh
gnunet/src/: meson.build  meson.build.arm  meson.build.arm_monolith
libextractor/: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  bootstrap  configure.ac
libextractor-java/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
libextractor-java/m4/: README  ac_check_class.m4  ac_check_classpath.m4  ac_check_rqrd_class.m4  ac_java_options.m4  ac_prog_jar.m4  ac_prog_java.m4  ac_prog_java_works.m4  ac_prog_javac.m4  ac_prog_javac_works.m4  ac_try_compile_java.m4  ac_try_run_java.m4
libextractor-java/native/: Makefile.am  extractor.c  jni.h  org_gnu_libextractor_Extractor.h
libextractor-java/org/: Makefile.am
libextractor/contrib/: doxygen
libextractor/doc/: libextractor.texi
libextractor/m4/: Makefile.am
libextractor/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ar.po  da.po  de.po  es.po  fr.po  ga.po  it.po  ka.po  libextractor.pot  nl.po  pl.po  pt_BR.po  ro.po  rw.po  sr.po  sv.po  uk.po  vi.po
libgnunetchat/: .gitignore  AUTHORS  ChangeLog  Doxyfile  HOWTO.md  README.md  meson.build
libgnunetchat/benchmark/: .setup.sh  authorization.sh  latency.sh  scaling.sh
libgnunetchat/contrib/: get_version.sh
libgnunetchat/doc/: .gitignore  generate.sh
libgnunetchat/include/: .gitignore  meson.build
libgnunetchat/src/: .gitignore  gnunet_chat_account.c  gnunet_chat_account.h  gnunet_chat_contact.c  gnunet_chat_contact_intern.c  gnunet_chat_context.c  gnunet_chat_context_intern.c  gnunet_chat_discourse.c  gnunet_chat_discourse_intern.c  gnunet_chat_file.c  gnunet_chat_file.h  gnunet_chat_group.c  gnunet_chat_group_intern.c  gnunet_chat_handle.c  gnunet_chat_handle.h  gnunet_chat_handle_intern.c  gnunet_chat_invitation.c  gnunet_chat_invitation_intern.c  gnunet_chat_lib.c  gnunet_chat_lib_intern.c  gnunet_chat_lobby.c  gnunet_chat_lobby_intern.c  gnunet_chat_message.c  gnunet_chat_message.h  gnunet_chat_ticket.c  gnunet_chat_ticket_intern.c  gnunet_chat_uri.c  gnunet_chat_uri.h  gnunet_chat_util.c  gnunet_chat_util.h  meson.build
libgnunetchat/tests/: .gitignore  meson.build  test_gnunet_chat.h
libgnunetchat/tools/: gnunet_chat_lib_uml.c  gnunet_messenger_ping.c  gnunet_messenger_uml.c  meson.build
libmicrohttpd2/doc/: .gitignore  Makefile.am  libmicrohttpd2-tutorial.texi  libmicrohttpd2.3  libmicrohttpd2.texi  run-gendocs.sh
messenger-cli/: .gitignore  AUTHORS  ChangeLog  README.md  meson.build
messenger-cli/resources/: logo.asc
messenger-cli/snap/: snapcraft.yaml
messenger-cli/src/: .gitignore  application.c  application.h  chat.c  chat.h  meson.build  messenger_cli.c  secret.c  secret.h  util.c  util.h
messenger-gtk/: .gitignore  .gitmodules  AUTHORS  ChangeLog  README.md  meson.build  meson.options
messenger-gtk/.github/: FUNDING.yml
messenger-gtk/contrib/: distribute_version.sh  get_version.sh
messenger-gtk/po/: POTFILES  de.po  en.po  es.po  meson.build  messenger-gtk.pot
messenger-gtk/resources/: .gitignore  css.gresource.xml  meson.build  org.gnunet.Messenger.appdata.xml  org.gnunet.Messenger.desktop  ui.gresource.xml
messenger-gtk/snap/: snapcraft.yaml
messenger-gtk/src/: .gitignore  account.c  account.h  application.c  application.h  contact.c  contact.h  discourse.c  discourse.h  event.c  event.h  file.c  file.h  media.c  media.h  meson.build  messenger_gtk.c  request.c  request.h  resources.c  resources.h  schedule.c  schedule.h  secret.c  secret.h  ui.c  ui.h  util.c  util.h
messenger-gtk/submodules/: meson.build
(+2634 files in other folders)
